# JGPU

./: .clangd  CMakeLists.txt  README.md
examples/Triangle/: CMakeLists.txt  main.cpp
include/jgpu/: adapter.h  buffer.h  commandEncoder.h  common.h  device.h  enumes.h  factory.h  handle.h  instance.h  jgpu.h  queue.h  resouce.h  swapchain.h  texture.h  textureView.h  types.h
src/core/: factory.cpp
src/d3d12/: dx12Adapter.cpp  dx12Adapter.h  dx12Buffer.cpp  dx12Buffer.h  dx12CommandEncoder.cpp  dx12CommandEncoder.h  dx12DescriptorAllocator.cpp  dx12DescriptorAllocator.h  dx12Device.cpp  dx12Device.h  dx12Factory.cpp  dx12Factory.h  dx12Instance.cpp  dx12Instance.h  dx12Queue.cpp  dx12Queue.h  dx12Swapchain.cpp  dx12Swapchain.h  dx12Texture.cpp  dx12Texture.h  dx12TextureView.cpp  dx12TextureView.h  dx12Utils.cpp  dx12Utils.h
